--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -1,7 +1,6 @@
-name: Reusable workflow
+name: Diagram generation
 
 on:
-  workflow_call:
   push:
     branches:
       - 'master'
@@ -11,8 +10,7 @@ on:
       - '.github/workflows/diagram.yml'
       - 'themes/**'
       - '.gitmodules'
+
 jobs:
   call-another-reusable:
     uses: eol-uchile/edx-staging/.github/workflows/diagram.yml@eol-release/koa
-    secrets:
-      SECRET_DIAGRAM: ${{ secrets.SECRET_DIAGRAM }}
