--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,13 +5,17 @@ on:
     branches:
       - staging
       - trying
+    paths:
+      - 'Dockerfile'
+      - 'requirements/*.txt'
+      - 'themes/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
 
       - name: Pull submodules
         run: git submodule update --init --recursive
@@ -23,7 +27,7 @@ jobs:
         run: docker build . --file ./Dockerfile --tag ghcr.io/eol-virtuallabx/norteamericano-edx:s3-static-${GITHUB_SHA} --target s3
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: eol-vl
