--- a/.github/workflows/webhook.yaml
+++ b/.github/workflows/webhook.yaml
@@ -1,9 +1,11 @@
 name: ArgoCD CI webhook
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows:
+      - 'Docker Image CI'
+    types:
+      - completed
 
 jobs:
   build:
@@ -11,6 +13,6 @@ jobs:
 
     steps:
       - name: Trigger upload only on the correct branch
-        if: github.ref == 'refs/heads/master'
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         run: |
           curl -XPOST -u "eol-vl:${{ secrets.CR_PAT }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/eol-virtuallabx/edx-argocd/dispatches --data '{"event_type": "update-images", "client_payload": {"type": "norteamericano"}}'
