--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -12,3 +12,5 @@ on:
 jobs:
   call-another-reusable:
     uses: eol-uchile/edx-staging/.github/workflows/diagram.yml@eol-release/koa
+    secrets:
+      SECRET_DIAGRAM: ${{ secrets.SECRET_DIAGRAM }}
