Revert "Workflow: Enable diagram generation in any branch"
This reverts commit 284842fb161ee663c18cc11d0250f033814f6d88.

--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -3,6 +3,8 @@ name: Diagram generation
 on:
   workflow_call:
   push:
+    branches:
+      - 'master'
     paths:
       - 'Dockerfile'
       - 'requirements/**.txt'
