Modified diagram and branch handling in Docker image

--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -1,10 +1,10 @@
-name: Diagram generation
+name: Generate Diagram
 
 on:
   workflow_call:
   push:
     branches:
-      - 'master'
+      - 'vlabx-release/**'
     paths:
       - 'Dockerfile'
       - 'requirements/**.txt'
